fixtures/cs-cmp-01/good/compare-with-typeof.ts
export function isStringToken(value: unknown) {
	return typeof value === "string";
}
